[tool.poetry]
name = "data-library"
version = "0.1.0"
description = ""
authors = ["Aafaq Rana <m.aafaq.rana@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.1"
sqlalchemy = "^2.0.30"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
